kubernetes/churros/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churros-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: GET
    nginx.ingress.kubernetes.io/websocket-services: churros-api
spec:
  rules:
    - host: churros.inpt.fr
      http:
        paths:
          # - backend:
          #     service:
          #       name: churros-maintenance
          #       port:
          #         number: 4002
          #   path: /
          #   pathType: Prefix
          - backend:
              service:
                name: churros-app
                port:
                  number: 3000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /.well-known/churros.app/server.json
            pathType: ImplementationSpecific
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /storage
            pathType: Prefix
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /graphql
            pathType: Prefix
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /print-booking
            pathType: Prefix
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /print-handover
            pathType: Prefix
          - backend:
              service:
                name: churros-api
                port:
                  number: 4000
            path: /auth
            pathType: Prefix
          - pathType: Prefix
            path: /lydia-webhook
            backend:
              service:
                name: churros-api
                port:
                  number: 4000
          - pathType: Prefix
            path: /log
            backend:
              service:
                name: churros-api
                port:
                  number: 4000
          - pathType: Prefix
            path: /dump
            backend:
              service:
                name: churros-api
                port:
                  number: 4000

  tls:
    - hosts:
        - churros.inpt.fr
      secretName: churros-tls
